--- a/carrito.html
+++ b/carrito.html
@@ -3,40 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito</title>
-    <link rel="stylesheet" href="shop.css">
+    <title>Carrito de Pedidos</title>
+    <link rel="stylesheet" href="carrito.css">
 </head>
 <body>
     <header>
-        <div class="logo">
-            <h1>Shop Online</h1>
-            <p>Anytime, Anywhere</p>
-        </div>
-        <div class="user-info">
-            <p>Bienvenido: <span>Jhon Doe</span></p>
-        </div>
-        <div class="cart-actions">
-            <a href="#"><img src="carrito.png" alt="Carrito" width="30"></a>
-            <a href="login.html"><img src="salir.png" alt="Salir" width="30"></a>
+        <h1>Shop Online</h1>
+        <div class="cart-action">
+            <span>Bienvenido: Jhon Doe</span>
+            <span><a href="#">Carrito</a></span>
+            <span><a href="#">Salir</a></span>
         </div>
     </header>
 
-    <main>
-        <h2>Relación de Pedidos</h2>
-        <table id="carrito-table">
-            <thead>
-                <tr>
-                    <th>Numero</th>
-                    <th>Fecha Solicitud</th>
-                    <th>Acciones</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Aquí se llenará con JavaScript -->
-            </tbody>
-        </table>
-    </main>
-    
+    <h2>Relación de Pedidos</h2>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Número</th>
+                <th>Fecha Solicitud</th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
+        <tbody id="pedidos-table">
+            <!-- Los pedidos serán insertados aquí -->
+        </tbody>
+    </table>
+
     <script src="carrito.js"></script>
 </body>
 </html>
