--- a/detalle.html
+++ b/detalle.html
@@ -16,12 +16,12 @@
     </div>
 </header>
 
-<h2>Bienvenido: Angel Diaz</h2>
+<h2>Bienvenido: John Doe</h2>
 
 <section class="pedido-info">
     <p>Fecha: 30/09/2024</p>
     <p>Pedido Número: 12345</p>
-    <p>Nombre del Cliente: Angel Diaz</p>
+    <p>Nombre del Cliente: John Doe</p>
 </section>
 
 <h3>Relación de Productos</h3>
