--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Shop Online</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="login-container">
@@ -21,6 +21,6 @@
         <a href="#">Registrarse</a>
     </div>
 
-    <script src="login.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
