Trabajo terminado en clase

--- a/HTML/carrito.html
+++ b/HTML/carrito.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrito de Pedidos</title>
-    <link rel="stylesheet" href="carrito.css">
+    <link rel="stylesheet" href="../CSS/carrito.css">
 </head>
 <body>
     <header>
@@ -40,6 +40,6 @@
         <button id="seguir-btn">Seguir comprando</button>
     </div>
 
-    <script src="carrito.js"></script>
+    <script src="../JavaScript/carrito.js"></script>
 </body>
 </html>
