--- a/HTML/detalle.html
+++ b/HTML/detalle.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalle del Pedido</title>
-    <link rel="stylesheet" href="detalle.css">
+    <link rel="stylesheet" href="../CSS/detalle.css">
 </head>
 <body>
 
@@ -12,8 +12,8 @@
     <h1>Shop Online</h1>
     <p>Anytime, Anywhere</p>
     <div class="header-options">
-        <a href="carrito.html">Carrito</a>
-        <a href="index.html">Salir</a>
+        <a href="../HTML/carrito.html">Carrito</a>
+        <a href="../HTML/index.html">Salir</a>
     </div>
 </header>
 
@@ -49,9 +49,9 @@
 <div class="actions">
     <button>Actualizar</button>
     <button>Confirmar</button>
-    <button onclick="location.href='shop.html'">Seguir Comprando</button>
+    <button onclick="location.href='../HTML/shop.html'">Seguir Comprando</button>
 </div>
 
-<script src="detalle.js"></script>
+<script src="../JavaScript/detalle.js"></script>
 </body>
 </html>
