--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop Online</title>
-    <link rel="stylesheet" href="shop.css">
+    <link rel="stylesheet" href="../CSS/shop.css">
 </head>
 <body>
     <header>
         <h1>Shop Online</h1>
         <p>Anytime, Anywhere</p>
         <div class="header-icons">
-            <a href="carrito.html">Carrito</a>
-            <a href="login.html" id="logout-btn">Salir</a>
+            <a href="../HTML/carrito.html">Carrito</a>
+            <a href="../HTML/index.html" id="logout-btn">Salir</a>
         </div>
     </header>
 
@@ -33,6 +33,6 @@
         <!-- Los productos aparecerán aquí -->
     </div>
 
-    <script src="shop.js"></script>
+    <script src="../JavaScript/shop.js"></script>
 </body>
 </html>
